# stalker-bot

./: .gitignore  main.py  pyproject.toml  requirements.txt  start.sh
cogs/: editor.py  general.py  worker.py
docs/superpowers/plans/: 2026-07-08-toss-invest-api.md
docs/superpowers/specs/: 2026-07-08-toss-invest-api-design.md
news/: clusterer.py  collector.py  config.py  digest.py  pipeline.py  refiner.py  scorer.py
server/: app.py  database.py  models.py  ohlcv.py  stalker.db
server/static/: administrator.html  alert-history.html  bot-settings.html  chart-editor.html  dashboard.html  editor.html  login.html  sidebar.js  stats.html  user-management.html  watchlist-digest.html  watchlist.html
tests/: test_chart.py  test_ohlcv.py  test_toss_api.py
utils/: __init__.py  chart.py  news.py  openai_client.py  summarizer.py  toss_api.py
