[project]
name = "stalker-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Minseong Kim",email = "mytheong@knu.ac.kr"},
    {name = "Dohyun Kim",email = "dhyunn7416@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "discord-py (>=2.7.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.38.0,<3.0.0)",
    "mplfinance (>=0.12.10b0)",
    "pandas (>=2.0.0)",
    "matplotlib (>=3.7.0)",
    "fastapi (>=0.100.0)",
    "uvicorn (>=0.23.0)",
    "aiohttp (>=3.9.0)",
    "httpx (>=0.28.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
